--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
             <input type="checkbox" id="consent-checkbox">
             <label for="consent-checkbox">我同意提交匿名实验数据</label>
         </div>
-        <button id="data-submit-btn" disabled>提交数据</button>
+        <button id="data-submit-btn" disabled>提交数据到GitHub</button>
+        <p style="text-align: center; margin-top: 10px; font-size: 0.9em; color: red;">
+            警告: Token已硬编码在代码中 - 仅用于测试目的
+        </p>
     </div>
 
     <script src="js/experiment.js" onerror="handleScriptError(this)"></script>
