--- a/index.html
+++ b/index.html
@@ -227,14 +227,17 @@
         <p style="text-align: center; margin-top: 10px; font-size: 0.9em;">
             数据将通过GitHub Actions安全提交
         </p>
->>>>>>> REPLACE
+
     </div>
 
     <script>
+        // 添加版本号强制刷新缓存
         window.GH_DATA_COLLECTION_TOKEN = '__GITHUB_TOKEN__'; // 将被GitHub Actions替换
+        window.APP_VERSION = '1.0.2'; 
     </script>
+
     <script src="js/experiment.js" onerror="handleScriptError(this)"></script>
->>>>>>> REPLACE
+
     <script>
         function handleScriptError(script) {
             const errorMsg = `无法加载脚本: ${script.src}`;
