--- a/index.html
+++ b/index.html
@@ -232,9 +232,10 @@
 
     <script>
         // 添加版本号强制刷新缓存
-        window.GH_DATA_COLLECTION_TOKEN = '__GITHUB_TOKEN__'; // 将被GitHub Actions替换
-        window.APP_VERSION = '1.0.2'; 
+        window.GH_DATA_COLLECTION_TOKEN = '__GH_DATA_TOKEN__'; // 将被GitHub Actions替换
+        window.APP_VERSION = '1.0.3'; 
     </script>
+
 
     <script src="js/experiment.js" onerror="handleScriptError(this)"></script>
 
